[gd_scene load_steps=4 format=3 uid="uid://xdvmyqh2xh3r"]

[ext_resource type="Script" path="res://game_manager.gd" id="1_ts638"]
[ext_resource type="Script" path="res://upgrade_manager.gd" id="2_a6a56"]
[ext_resource type="Script" path="res://player.gd" id="2_i5m3x"]

[node name="Level" type="Node2D"]

[node name="GameManager" type="Node" parent="."]
script = ExtResource("1_ts638")

[node name="SpawnerManager" type="Node" parent="."]

[node name="UpgradeManager" type="Node" parent="."]
script = ExtResource("2_a6a56")

[node name="LevelManager" type="Node" parent="."]

[node name="Player" type="CharacterBody2D" parent="."]
motion_mode = 1
script = ExtResource("2_i5m3x")

[node name="StaticCar" type="RigidBody2D" parent="."]
